修改POS机与承运商信息的查询与导出

--- a/tongqinche/src/trunk/tongqinche/tongqinche/Views/POSCarrier/POSCarrierIndex.cshtml
+++ b/tongqinche/src/trunk/tongqinche/tongqinche/Views/POSCarrier/POSCarrierIndex.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "POSCarrierIndex";
 }
 @section Head{  }
@@ -161,187 +160,17 @@
                         </div>
 
                     </div>
-                    @*<table class="table table-striped table-bordered table-hover" id="sample_3">
 
-                            <thead>
-
-                                <tr>
-
-                                    <th style="width:8px;"><input type="checkbox" class="group-checkable" data-set="#sample_3 .checkboxes" /></th>
-
-                                    <th>Username</th>
-
-                                    <th class="hidden-480">Email</th>
-
-                                    <th class="hidden-480">Status</th>
-
-                                </tr>
-
-                            </thead>
-
-                            <tbody>
-
-                                <tr class="odd gradeX">
-
-                                    <td><input type="checkbox" class="checkboxes" value="1" /></td>
-
-                                    <td>shuxer</td>
-
-                                    <td class="hidden-480"><a href="mailto:shuxer@gmail.com">shuxer@gmail.com</a></td>
-
-                                    <td><span class="label label-success">Approved</span></td>
-
-                                </tr>
-
-                                <tr class="odd gradeX">
-
-                                    <td><input type="checkbox" class="checkboxes" value="1" /></td>
-
-                                    <td>looper</td>
-
-                                    <td class="hidden-480"><a href="mailto:looper90@gmail.com">looper90@gmail.com</a></td>
-
-                                    <td><span class="label label-warning">Suspended</span></td>
-
-                                </tr>
-
-                                <tr class="odd gradeX">
-
-                                    <td><input type="checkbox" class="checkboxes" value="1" /></td>
-
-                                    <td>userwow</td>
-
-                                    <td class="hidden-480"><a href="mailto:userwow@yahoo.com">userwow@yahoo.com</a></td>
-
-                                    <td><span class="label label-success">Approved</span></td>
-
-                                </tr>
-
-                                <tr class="odd gradeX">
-
-                                    <td><input type="checkbox" class="checkboxes" value="1" /></td>
-
-                                    <td>user1wow</td>
-
-                                    <td class="hidden-480"><a href="mailto:userwow@gmail.com">userwow@gmail.com</a></td>
-
-                                    <td><span class="label label-inverse">Blocked</span></td>
-
-                                </tr>
-
-                                <tr class="odd gradeX">
-
-                                    <td><input type="checkbox" class="checkboxes" value="1" /></td>
-
-                                    <td>restest</td>
-
-                                    <td class="hidden-480"><a href="mailto:userwow@gmail.com">test@gmail.com</a></td>
-
-                                    <td><span class="label label-success">Approved</span></td>
-
-                                </tr>
-
-                                <tr class="odd gradeX">
-
-                                    <td><input type="checkbox" class="checkboxes" value="1" /></td>
-
-                                    <td>foopl</td>
-
-                                    <td class="hidden-480"><a href="mailto:userwow@gmail.com">good@gmail.com</a></td>
-
-                                    <td><span class="label label-success">Approved</span></td>
-
-                                </tr>
-
-                                <tr class="odd gradeX">
-
-                                    <td><input type="checkbox" class="checkboxes" value="1" /></td>
-
-                                    <td>weep</td>
-
-                                    <td class="hidden-480"><a href="mailto:userwow@gmail.com">good@gmail.com</a></td>
-
-                                    <td><span class="label label-success">Approved</span></td>
-
-                                </tr>
-
-                                <tr class="odd gradeX">
-
-                                    <td><input type="checkbox" class="checkboxes" value="1" /></td>
-
-                                    <td>coop</td>
-
-                                    <td class="hidden-480"><a href="mailto:userwow@gmail.com">good@gmail.com</a></td>
-
-                                    <td><span class="label label-success">Approved</span></td>
-
-                                </tr>
-
-                                <tr class="odd gradeX">
-
-                                    <td><input type="checkbox" class="checkboxes" value="1" /></td>
-
-                                    <td>pppol</td>
-
-                                    <td class="hidden-480"><a href="mailto:userwow@gmail.com">good@gmail.com</a></td>
-
-                                    <td><span class="label label-success">Approved</span></td>
-
-                                </tr>
-
-                                <tr class="odd gradeX">
-
-                                    <td><input type="checkbox" class="checkboxes" value="1" /></td>
-
-                                    <td>test</td>
-
-                                    <td class="hidden-480"><a href="mailto:userwow@gmail.com">good@gmail.com</a></td>
-
-                                    <td><span class="label label-success">Approved</span></td>
-
-                                </tr>
-
-                                <tr class="odd gradeX">
-
-                                    <td><input type="checkbox" class="checkboxes" value="1" /></td>
-
-                                    <td>userwow</td>
-
-                                    <td class="hidden-480"><a href="mailto:userwow@gmail.com">userwow@gmail.com</a></td>
-
-                                    <td><span class="label label-inverse">Blocked</span></td>
-
-                                </tr>
-
-                                <tr class="odd gradeX">
-
-                                    <td><input type="checkbox" class="checkboxes" value="1" /></td>
-
-                                    <td>test</td>
-
-                                    <td class="hidden-480"><a href="mailto:userwow@gmail.com">test@gmail.com</a></td>
-
-                                    <td><span class="label label-success">Approved</span></td>
-
-                                </tr>
-
-                            </tbody>
-
-                        </table>*@
                     <table class="table table-striped table-bordered table-hover" id="sample_3">
 
                         <thead>
                             <tr>
                                 <th style="width:8px;"><input type="checkbox" class="group-checkable" data-set="#sample_3 .checkboxes" /></th>
-                                <th>站点编号</th>
-                                <th>站点名称</th>
-                                <th>站点类型</th>
-                                <th>省</th>
-                                <th>市</th>
-                                <th>区</th>
+                                <th>承运商名称</th>
+                                <th>车载机编号</th>
+                                <th>联系人</th>
+                                <th>联系电话</th>
                                 <th>状态</th>
-                                <th>地址</th>
-                                <th>查看</th>
                             </tr>
 
                         </thead>
@@ -380,11 +209,12 @@
             });
 
             $("#btnSelect").click(function () {
+                alert("b");
                 $('#sample_3 tr:not(:first)').empty();
                 var d = {};
                 //判断文件框内容
-                if ($("#CarrierName").val() != "") {
-                    d["CarrierName"] = $("#CarrierName").val();
+                if ($("#CarrierId").val() != "") {
+                    d["CarrierId"] = $("#CarrierId").val();
                 }
 
                 if ($("#POSId").val() != "") {
@@ -400,28 +230,25 @@
                     d = null;
                 }
                 $.ajax({
-                    url: "../api/LocApi/PostZhanDian",
+                    url: "../api/POSCarrierApi/PostPOSCarrier",
                     type: "post",
                     contentType: 'application/json; charset=utf-8',
                     data: JSON.stringify(d),
                     success: function (data) {
-                        var locList = JSON.parse(data);
-                        $.each(locList, function (i, loc) {
-                            var loc_status = "";
-                            if (loc.Status == 0) {
-                                loc_status = "有效";
+                        var _POSCarrierList = JSON.parse(data);
+                        $.each(_POSCarrierList, function (i, _POSCarrier) {
+                            if (_POSCarrier["Status"] == 0) {
+                                _POSCarrier["Status"] = "有效";
                             }
                             else {
-                                loc_status = "无效";
+                                _POSCarrier["Status"] = "无效";
                             }
-                            var newRow = "<tr class=\"odd gradeX\"><td><input name=\"flag\" type=\"checkbox\" class=\"checkboxes\" value=" + loc.Id
-                                + " /></td><td>" + loc.LocCode + "</td><td>" + loc.LocName
-                                + "</td><td>" + loc.LocType + "</td><td>" + loc.ProvinceCode + "</td><td>" + loc.DistrictCode
-                                + "</td><td>" + loc.Longitude + "</td><td> " + loc_status + "</td><td>" + loc.LocName
-                                + "</td><td> <a class=\"edit\" href=\"javascript:;\">查看</a> </td></tr>";
+                            var newRow = "<tr class=\"odd gradeX\"><td><input name=\"flag\" type=\"checkbox\" class=\"checkboxes\" value=" + _POSCarrier["ID"]
+                                + " /></td><td>" + _POSCarrier["CarrierName"] + "</td><td>" + _POSCarrier["POSId"] + "</td><td>" + _POSCarrier["Contact"]
+                                + "</td><td>" + _POSCarrier["Mobile"] + "</td><td>" + _POSCarrier["Status"] + "</td></tr>";
                             $("#sample_3 tr:last").after(newRow);
                         });
-                        TableManaged.init();
+                        //TableManaged.init();
                     }
                 }).fail(
                     function (err) {
@@ -434,8 +261,8 @@
                 $('#table_view tr:not(:first)').empty();
                 var d = {};
                 //判断文件框内容
-                if ($("#CarrierName").val() != "") {
-                    d["CarrierName"] = $("#CarrierName").val();
+                if ($("#CarrierId").val() != "") {
+                    d["CarrierId"] = $("#CarrierId").val();
                 }
 
                 if ($("#POSId").val() != "") {
@@ -450,7 +277,7 @@
                     d = null;
                 }
                 $.ajax({
-                    url: "../api/LocApi/ExportZhanDian",
+                    url: "../api/POSCarrierApi/ExportPOSCarrier",
                     type: "post",
                     contentType: 'application/json; charset=utf-8',
                     data: JSON.stringify(d),
